[package]
name = "chrono"
version = "0.2.0-dev"
authors = ["Kang Seonghoon <public+rust@mearie.org>"]

description = "Date and time library for Rust"
homepage = "https://github.com/lifthrasiir/rust-chrono"
documentation = "https://lifthrasiir.github.io/rust-chrono/"
repository = "https://github.com/lifthrasiir/rust-chrono"
keywords = ["date", "time", "calendar"]
readme = "README.md"
license = "MIT/Apache-2.0"

[lib]
name = "chrono"

[dependencies]
time = "0.1.12"

[profile.dev]
# XXX workaround for Rust issue #21010
debug = false

[profile.test]
# XXX workaround for Rust issue #21010
debug = false

